; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mlx4/mlx4_core/extr_mlx4_srq.c_mlx4_srq_arm.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mlx4/mlx4_core/extr_mlx4_srq.c_mlx4_srq_arm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_dev = type { i32 }
%struct.mlx4_srq = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mlx4_srq_arm(%struct.mlx4_dev* %0, %struct.mlx4_srq* %1, i32 %2) #0 {
  %4 = alloca %struct.mlx4_dev*, align 8
  %5 = alloca %struct.mlx4_srq*, align 8
  %6 = alloca i32, align 4
  store %struct.mlx4_dev* %0, %struct.mlx4_dev** %4, align 8
  store %struct.mlx4_srq* %1, %struct.mlx4_srq** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.mlx4_dev*, %struct.mlx4_dev** %4, align 8
  %8 = load %struct.mlx4_srq*, %struct.mlx4_srq** %5, align 8
  %9 = getelementptr inbounds %struct.mlx4_srq, %struct.mlx4_srq* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @mlx4_ARM_SRQ(%struct.mlx4_dev* %7, i32 %10, i32 %11)
  ret i32 %12
}

declare dso_local i32 @mlx4_ARM_SRQ(%struct.mlx4_dev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
